[package]
name = "bonding-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = "0.29.0"  # Downgrade to 0.29.0
anchor-spl = "0.29.0"   # Match the version
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package="raydium-cpmm-cpi", branch = "anchor-0.29.0" }
